exports[`client > reducers > group commuters children handler reducer tests it should handle add commuter 1`] = `
Object {
  "group-2": Object {
    "_id": "group-2",
    "allAddressesGeocoded": true,
    "commuters": Array [
      "commuter-2",
      "commuter-new",
    ],
    "name": "Mock Group",
    "organizationId": "organization-2",
  },
}
`;

exports[`client > reducers > group commuters children handler reducer tests it should handle delete commuter 1`] = `
Object {
  "group-2": Object {
    "_id": "group-2",
    "allAddressesGeocoded": true,
    "commuters": Array [],
    "name": "Mock Group",
    "organizationId": "organization-2",
  },
}
`;

exports[`client > reducers > group generic reducer tests should handle delete group 1`] = `Object {}`;

exports[`client > reducers > group generic reducer tests should handle set group 1`] = `
Object {
  "group-3": Object {
    "_id": "group-3",
    "commuters": Array [],
    "name": "Another Group",
  },
}
`;

exports[`client > reducers > group generic reducer tests should handle set groups 1`] = `
Object {
  "group-3": Object {
    "_id": "group-3",
    "commuters": Array [],
    "name": "Another Group",
  },
}
`;

exports[`client > reducers > group should handle add group 1`] = `
Object {
  "new-group": Object {
    "_id": "new-group",
    "commuters": Array [
      "new-commuter",
    ],
    "name": "Fake Group",
    "organizationId": "organization-1",
  },
}
`;

exports[`client > reducers > group should handle append commuters 1`] = `
Object {
  "group-2": Object {
    "_id": "group-2",
    "allAddressesGeocoded": true,
    "commuters": Array [
      "commuter-2",
      "commuter-3",
    ],
    "name": "Mock Group",
    "organizationId": "organization-2",
  },
}
`;
